--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
             <li>
               <span class="news-date">20 Nov 2025</span>
               <span class="news-label">•</span>
-              <a href="https://forms.gle/wT7oCMchWCRcnBbUA">Call for Presentation</a> is now open, fill the submission form by Nov 30 to share your latest work to the community!
+              <a href="https://forms.gle/wT7oCMchWCRcnBbUA">Call for Presentation</a> is now open, fill the submission form by Dec. 7 to share your latest work to the community!
             </li>
             <li>
               <span class="news-date">18 Nov 2025</span>
