--- a/index.html
+++ b/index.html
@@ -700,6 +700,16 @@
         color: #d62828;
       }
 
+      .invited-name a {
+        color: inherit;
+        text-decoration: none;
+      }
+
+      .invited-name a:hover,
+      .invited-name a:focus {
+        text-decoration: underline;
+      }
+
       .invited-affiliation {
         margin: -0.3rem 0 0;
         color: #6b7280;
@@ -987,13 +997,7 @@
               </tr>
               <tr>
                 <td class="schedule-time">09:30–10:00</td>
-                <td class="schedule-session">
-                  <strong>Keynote 1</strong>
-                  <span class="schedule-speaker">
-                    <span class="schedule-speaker-label">Speaker:</span>
-                    <span class="schedule-speaker-name">Hung-yi Lee</span>
-                  </span>
-                </td>
+                <td class="schedule-session"><strong>Keynote 1</strong></td>
               </tr>
               <tr>
                 <td class="schedule-time">10:00–10:30</td>
@@ -1004,23 +1008,11 @@
               </tr>
               <tr>
                 <td class="schedule-time">10:50–11:20</td>
-                <td class="schedule-session">
-                  <strong>Keynote 2</strong>
-                  <span class="schedule-speaker">
-                    <span class="schedule-speaker-label">Speaker:</span>
-                    <span class="schedule-speaker-name">Yuki Arase</span>
-                  </span>
-                </td>
+                <td class="schedule-session"><strong>Keynote 2</strong></td>
               </tr>
               <tr>
                 <td class="schedule-time">11:20–11:50</td>
-                <td class="schedule-session">
-                  <strong>Keynote 3</strong>
-                  <span class="schedule-speaker">
-                    <span class="schedule-speaker-label">Speaker:</span>
-                    <span class="schedule-speaker-name">Tanmoy Chakraborty</span>
-                  </span>
-                </td>
+                <td class="schedule-session"><strong>Keynote 3</strong></td>
               </tr>
               <tr class="schedule-break">
                 <td colspan="2">12:00–13:00 - Lunch Break</td>
@@ -1034,13 +1026,7 @@
               </tr>
               <tr>
                 <td class="schedule-time">14:40–15:10</td>
-                <td class="schedule-session">
-                  <strong>Keynote 4</strong>
-                  <span class="schedule-speaker">
-                    <span class="schedule-speaker-label">Speaker:</span>
-                    <span class="schedule-speaker-name">Derek F. Wong</span>
-                  </span>
-                </td>
+                <td class="schedule-session"><strong>Keynote 4</strong></td>
               </tr>
               <tr>
                 <td class="schedule-time">15:10–15:40</td>
@@ -1292,22 +1278,22 @@
           <div class="invited-grid">
             <div class="invited-card">
               <img src="assets/lee.jpg" alt="Hung-yi Lee" class="invited-photo" />
-              <p class="invited-name">Hung-yi Lee</p>
+              <p class="invited-name"><a href="https://speech.ee.ntu.edu.tw/~tlkagk/" target="_blank" rel="noopener">Hung-yi Lee</a></p>
               <p class="invited-affiliation">National Taiwan University</p>
             </div>
             <div class="invited-card">
               <img src="assets/arase.jpg" alt="Yuki Arase" class="invited-photo" />
-              <p class="invited-name">Yuki Arase</p>
+              <p class="invited-name"><a href="https://yukiar.github.io/" target="_blank" rel="noopener">Yuki Arase</a></p>
               <p class="invited-affiliation">Tokyo Institute of Technology</p>
             </div>
             <div class="invited-card">
               <img src="assets/Chakraborty.png" alt="Tanmoy Chakraborty" class="invited-photo" />
-              <p class="invited-name">Tanmoy Chakraborty</p>
+              <p class="invited-name"><a href="https://tanmoychak.com/" target="_blank" rel="noopener">Tanmoy Chakraborty</a></p>
               <p class="invited-affiliation">Indian Institute of Technology, Delhi</p>
             </div>
             <div class="invited-card">
               <img src="assets/wong.png" alt="Derek F. Wong" class="invited-photo" />
-              <p class="invited-name">Derek F. Wong</p>
+              <p class="invited-name"><a href="https://www.fst.um.edu.mo/personal/derek-wong/" target="_blank" rel="noopener">Derek F. Wong</a></p>
               <p class="invited-affiliation">University of Macau</p>
             </div>
           </div>
